--- a/mobile.css
+++ b/mobile.css
@@ -1,10 +1,13 @@
 *{
     padding: 0;
     margin: 0;
-    font-family: "MyFont"
 }
 
-@font-face {
+body{
+    font-family: "Noto Serif JP";
+}
+
+/*@font-face {
     font-family: "MyFont";
     src: url(fonts-NotoSansCJKjp/NotoSansCJKjp-Light.otf) format("opentype");
     font-weight: 100;
@@ -32,12 +35,12 @@
     font-family: "MyFont";
     src: url(fonts-NotoSansCJKjp/NotoSansCJKjp-Black.otf) format("opentype");
     font-weight: 500;
-}
+}*/
 
 .index{
     display: none;
 }
 
 .mobile{
-    font-weight: 500;
+    font-weight: 900;
 }
