--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: "MyFont";
 }
 
-@font-face {
+body{
+    font-family: "Noto Serif JP";
+}
+
+/*@font-face {
     font-family: "MyFont";
     src: url(fonts-NotoSansCJKjp/NotoSansCJKjp-Light.otf) format("opentype");
     font-weight: 100;
@@ -32,10 +35,10 @@
     font-family: "MyFont";
     src: url(fonts-NotoSansCJKjp/NotoSansCJKjp-Black.otf) format("opentype");
     font-weight: 500;
-}
+}*/
 
 .index{
-    font-weight: 100;
+    font-weight: 300;
 }
 
 .mobile{
