--- a/mobile.css
+++ b/mobile.css
@@ -13,10 +13,6 @@ body {
 }
 
 /*ファーストビュー設定*/
-header {
-    text-align: center;
-}
-
 .heroForStyle {
     display: none;
 }
@@ -26,22 +22,26 @@ header {
     position: relative;
 }
 
-/*header h1 {
+header div h1 {
     font-size: 56rem;
     font-weight: 300;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    margin: 0 auto;
+    padding: 9% 2% 3%;
     -webkit-writing-mode: vertical-rl;
     -ms-writing-mode: tb-rl;
     writing-mode: vertical-rl;
     color: #020208;
     background-color: rgba(255, 255, 255, 0.9);
+}
+
+header div{
+    position: absolute;
+    top: 10%;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
     border: 1px solid rgba(255, 255, 255, 0);
-    text-align: center;
-}*/
+    width: 22%;
+}
 
 header p {
     display: none;
