--- a/style.css
+++ b/style.css
@@ -44,4 +44,23 @@ header p {
 /*navバーの作成*/
 ul {
     list-style-type: none;
+    text-align: center;
+    padding: 16px 0;
+}
+
+li {
+    display: inline;
+    margin: 2%;
+}
+
+a{
+    font-size: 24rem;
+    text-decoration: none;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.2s;
+}
+
+a:hover{
+    color: rgba(255, 255, 255, 0.35);
 }
