--- a/mobile.css
+++ b/mobile.css
@@ -12,102 +12,13 @@ body {
     background-size: cover;
 }
 
+section {
+    margin: 0 0 300px;
+}
+
 /*ファーストビュー設定*/
 header {
     position: relative;
-}
-
-#nav-drawer {
-    position: relative;
-}
-
-/*チェックボックス等は非表示に*/
-.nav-unshown {
-    display: none;
-}
-
-/*アイコンのスペース*/
-#nav-open {
-    display: inline-block;
-    width: 30px;
-    height: 22px;
-    vertical-align: middle;
-}
-
-/*ハンバーガーアイコンをCSSだけで表現*/
-#nav-open span,
-#nav-open span:before,
-#nav-open span:after {
-    position: absolute;
-    height: 3px;
-    /*線の太さ*/
-    width: 25px;
-    /*長さ*/
-    border-radius: 3px;
-    background: #555;
-    display: block;
-    content: '';
-    cursor: pointer;
-}
-
-#nav-open span:before {
-    bottom: -8px;
-}
-
-#nav-open span:after {
-    bottom: -16px;
-}
-
-/*閉じる用の薄黒カバー*/
-#nav-close {
-    display: none;
-    /*はじめは隠しておく*/
-    position: fixed;
-    z-index: 99;
-    top: 0;
-    /*全体に広がるように*/
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: black;
-    opacity: 0;
-    transition: .3s ease-in-out;
-}
-
-/*中身*/
-#nav-content {
-    overflow: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    /*最前面に*/
-    width: 90%;
-    /*右側に隙間を作る（閉じるカバーを表示）*/
-    max-width: 330px;
-    /*最大幅（調整してください）*/
-    height: 100%;
-    background: #fff;
-    /*背景色*/
-    transition: .3s ease-in-out;
-    /*滑らかに表示*/
-    -webkit-transform: translateX(-105%);
-    transform: translateX(-105%);
-    /*左に隠しておく*/
-}
-
-/*チェックが入ったらもろもろ表示*/
-#nav-input:checked ~ #nav-close {
-    display: block;
-    /*カバーを表示*/
-    opacity: .5;
-}
-
-#nav-input:checked ~ #nav-content {
-    -webkit-transform: translateX(0%);
-    transform: translateX(0%);
-    /*中身を表示（右へスライド）*/
-    box-shadow: 6px 0 25px rgba(0, 0, 0, .15);
 }
 
 .heroForStyle {
@@ -122,7 +33,7 @@ header {
 header div h1 {
     font-size: 56rem;
     font-weight: 300;
-    padding: 9% 2% 3%;
+    padding: 40% 2% 5%;
     -webkit-writing-mode: vertical-rl;
     -ms-writing-mode: tb-rl;
     writing-mode: vertical-rl;
@@ -132,7 +43,7 @@ header div h1 {
 
 header div {
     position: absolute;
-    top: 10%;
+    top: 16%;
     right: 0;
     left: 0;
     margin: 0 auto;
@@ -152,6 +63,7 @@ header p {
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    margin: 0;
 }
 
 .catchPhrase p {
@@ -161,4 +73,44 @@ header p {
 
 nav {
     display: none;
+}
+
+/*弦音巴とは？作成*/
+#whatIsOtoha {
+    background-image: url(imageForMobile/whatIsOtoha.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+#whatIsOtoha img {
+    width: 66%;
+    display: block;
+    margin: 0 auto;
+    padding: 20% 0;
+}
+
+#whatIsOtoha .purpose {
+    text-align: center;
+    font-size: 24rem;
+    display: inline-block;
+    padding: 3%;
+}
+
+#whatIsOtoha .purposeContainer {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    padding: 0 0 20%;
+}
+
+#explanationStyle{
+    display: none;
+}
+
+#whatIsOtoha #explanationMobile {
+    text-align: center;
+    font-size: 12rem;
+    padding: 0 0 20%;
+    line-height: 4rem
 }
