--- a/mobile.css
+++ b/mobile.css
@@ -94,7 +94,7 @@ nav {
     text-align: center;
     font-size: 24rem;
     display: inline-block;
-    padding: 3%;
+    padding: 3% 0;
 }
 
 #whatIsOtoha .purposeContainer {
