--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ a:hover {
     text-align: center;
     font-size: 16rem;
     padding: 0 0 5%;
-    line-height: 1.5
+    line-height: 3;
 }
 
 #explanationMobile {
