--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 section {
-    margin: 0 0 300px;
+    margin: 0 0 220px;
 }
 
 /*ファーストビュー設定*/
@@ -48,6 +48,7 @@ header p {
 /*navバーの作成*/
 nav {
     position: relative;
+    background-color: rgba(2, 2, 8, 0.9);
 }
 
 ul {
@@ -65,6 +66,11 @@ li {
     position: absolute;
     top: 23%;
     left: 2.5%;
+    z-index: 9999;
+}
+
+#navImgForMobile {
+    display: none;
 }
 
 .navItem {
@@ -85,7 +91,7 @@ a:hover {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    margin-top: 300px;
+    margin-top: 220px;
 }
 
 #whatIsOtoha img {
@@ -119,3 +125,134 @@ a:hover {
 #explanationMobile {
     display: none;
 }
+
+/*説明会・ライブ作成*/
+#videosForMobile {
+    display: none;
+}
+
+.video {
+    position: relative;
+    width: 38%;
+    height: 312px;
+}
+
+.video p {
+    display: inline-block;
+    font-size: 14rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.video iframe {
+    position: absolute;
+    top: 24px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    width: 100%;
+    height: 312px;
+}
+
+#expMeetAndLive {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
+.expMeetAndLivebox {
+    width: 38%;
+    height: 312px;
+    box-sizing: border-box;
+    border: 4px solid #fff;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#shinkan-pv {
+    margin: 8% 4% 4% 8%;
+    order: 1;
+}
+
+#tandokukouen {
+    margin: 4% 8% 8% 4%;
+    order: 4;
+}
+
+#expBox {
+    margin: 10% 8% 4% 4%;
+    order: 2;
+
+}
+
+#liveBox {
+    margin: 6% 4% 8% 8%;
+    order: 3;
+}
+
+.boxTitle p {
+    color: #020208;
+    font-size: 40rem;
+    font-weight: 700;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 3.6;
+}
+
+.boxTitle {
+    background-color: #fff;
+    width: 50%;
+    height: 50%;
+}
+
+.dateBox {
+    display: flex;
+    flex-flow: row wrap;
+    box-sizing: border-box;
+    height: 50%;
+    width: 50%;
+}
+
+.dayBox {
+    width: 25%;
+    height: 60%;
+    box-sizing: border-box;
+}
+
+.dayBox p {
+    font-size: 48rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.monthBox {
+    width: 75%;
+    height: 60%;
+    box-sizing: border-box;
+    padding-top: 5%;
+}
+
+.monthBox p {
+    font-size: 12rem;
+    font-weight: 300;
+}
+
+.monthBox p span {
+    font-size: 24rem;
+    font-weight: 400;
+}
+
+.timeAndSpaceBox {
+    width: 100%;
+    height: 40%;
+    box-sizing: border-box;
+    padding-left: 5%
+}
+
+.timeAndSpaceBox p {
+    font-size: 16rem;
+    font-weight: 400;
+}
+
+/*練習見学作成*/
