--- a/mobile.css
+++ b/mobile.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     font-size: 1px;
-    color: #e8effb;
+    color: #fff;
 }
 
 body {
@@ -14,6 +14,10 @@ body {
 
 section {
     margin: 0 0 120px;
+}
+
+.imgForStyle {
+    display: none;
 }
 
 /*ファーストビュー設定*/
@@ -366,7 +370,119 @@ nav {
 
 
 /*新歓食事会作成*/
+.welcomePartyTitle {
+    font-size: 24rem;
+    font-weight: 500;
+    width: 68%;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #fff;
+    color: #020208;
+    padding: 2% 4%;
+    box-sizing: border-box;
+    margin-bottom: 56px;
+}
 
+#welcomePartyContainerForMobile {
+    width: 68%;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row wrap;
+    margin-bottom: 56px;
+}
+
+.welcomePartyDateBoxForMobile {
+    width: 50%;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.welcomePartyPlaceBoxForMobile {
+    width: 50%;
+    padding-top: 5%;
+    font-size: 16rem;
+    font-weight: 400;
+}
+
+.welcomePartyDayBoxForMobile {
+    font-size: 32rem;
+    font-weight: 500;
+    width: 50%;
+    text-align: right;
+}
+
+.welcomePartyMonthBoxForMobile {
+    font-size: 8rem;
+    font-weight: 300;
+    width: 50%;
+    padding: 6% 0 0 4%;
+    box-sizing: border-box;
+}
+
+.welcomePartyMonthBoxForMobile span {
+    font-size: 14rem;
+    font-weight: 400;
+}
+
+#welcomePartyContainer {
+    width: 68%;
+    position: relative;
+    margin: 0 auto;
+}
+
+#welcomePartyContainer img {
+    width: 100%;
+}
+
+#welcomePartyInfoContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+
+.welcomePartyDateBox {
+    display: none;
+}
+
+.welcomePartyPlaceBox {
+    display: none;
+}
+
+.welcomePartyTimeAndPlaceBoxForStyle {
+    display: none;
+}
+
+.welcomePartyExplanationForStyle {
+    display: none;
+}
+
+.welcomePartyTimeAndPlaceBox {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 15% 0;
+}
+
+.welcomePartyExplanation {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.welcomePartyTimeAndPlaceBox p {
+    font-size: 18rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.welcomePartyExplanation p {
+    font-size: 12rem;
+    font-weight: 400;
+    text-align: center;
+}
 
 /*jQuery*/
 .fuwatAnime {
