--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     font-size: 1px;
-    color: #e8effb;
+    color: #fff;
 }
 
 body {
@@ -16,6 +16,10 @@ body {
 
 section {
     margin: 0 0 180px;
+}
+
+.imgForMobile{
+    display: none;
 }
 
 /*ファーストビュー設定*/
@@ -390,7 +394,136 @@ a:hover {
 }
 
 /*新歓食事会作成*/
+#welcomePartyContainer {
+    width: 52%;
+    margin: 0 auto;
+    position: relative;
+}
 
+#welcomePartyContainer img {
+    width: 100%;
+}
+
+#welcomePartyInfoContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit- transform: translateY(-50%) translateX(-50%);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    box-sizing: border-box;
+}
+
+.welcomePartyDateBox {
+    width: 50%;
+    height: 25%;
+    box-sizing: border-box;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.welcomePartyPlaceBox {
+    width: 50%;
+    height: 25%;
+    box-sizing: border-box;
+    padding-top: 20%;
+}
+
+.PlaceBottom {
+    padding-top: 11%;
+}
+
+.welcomePartyTimeAndPlaceBox {
+    width: 100%;
+    height: 20%;
+    box-sizing: border-box;
+    padding-top: 10%;
+}
+
+.welcomePartyExplanation {
+    width: 100%;
+    height: 30%;
+    box-sizing: border-box;
+    padding-top: 2%;
+}
+
+.welcomePartyPlaceBox p {
+    font-size: 14rem;
+    font-weight: 400;
+}
+
+.welcomePartyTimeAndPlaceBox p {
+    font-size: 28rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.welcomePartyExplanation p {
+    font-size: 14rem;
+    font-weight: 400;
+    text-align: center;
+}
+
+.welcomePartyDayBox {
+    font-size: 56rem;
+    font-weight: 700;
+    height: 100%;
+    width: 60%;
+    text-align: right;
+    padding-top: 32%;
+}
+
+.DayBottom {
+    padding-top: 12%
+}
+
+.welcomePartyMonthBox {
+    font-size: 14rem;
+    font-weight: 300;
+    padding: 38% 0 0 5%;
+}
+
+.MonthBottom {
+    padding-top: 18%
+}
+
+.welcomePartyMonthBox span {
+    font-size: 24rem;
+    font-weight: 500;
+}
+
+#welcomePartyContainer:before {
+    content: "　新歓食事会　";
+    position: absolute;
+    top: 0;
+    left: -18%;
+    background-color: #fff;
+    color: #020208;
+    font-size: 48rem;
+    -webkit-writing-mode: vertical-rl;
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+    padding: 0 2%;
+}
+
+.welcomePartyTitle{
+    display: none;
+}
+
+#welcomePartyContainerForMobile{
+    display: none;
+}
+
+.welcomePartyTimeAndPlaceBoxForMobile{
+    display: none;
+}
+
+.welcomePartyExplanationForMobile{
+    display: none;
+}
 
 /*jQuery*/
 .fuwatAnime {
