--- a/mobile.css
+++ b/mobile.css
@@ -190,7 +190,7 @@ nav {
 .boxTitle p {
     color: #020208;
     font-size: 32rem;
-    font-weight: 700;
+    font-weight: 500;
     text-align: center;
     vertical-align: middle;
     line-height: 2.9;
@@ -400,7 +400,10 @@ nav {
 .welcomePartyPlaceBoxForMobile {
     width: 50%;
     padding-top: 5%;
-    font-size: 16rem;
+}
+
+.welcomePartyPlaceBoxForMobile p{
+    font-size: 10rem;
     font-weight: 400;
 }
 
