--- a/mobile.css
+++ b/mobile.css
@@ -76,15 +76,132 @@ header p {
 }
 
 /*navバーの作成*/
-nav {
+.navForStyle {
     display: none;
 }
 
 #navImgForMobile {
-    position: absolute;
+    position: fixed;
     top: 16px;
     left: 16px;
-    z-index: 1;
+    z-index: 9999;
+    opacity: 0.8;
+}
+
+/*ナビメニューのスタイルを指定*/
+nav.NavMenu {
+    position: fixed;
+    /*表示位置を固定*/
+    z-index: 2;
+    /*重ね順を変更*/
+    top: 0;
+    /*表示位置を指定*/
+    left: 0;
+    /*表示位置を指定*/
+    background: rgba(2, 2, 8, 0.5);
+    /*背景を白にする*/
+    color: #fff;
+    /*文字色を黒にする*/
+    text-align: center;
+    /*テキストを中央揃え*/
+    width: 100%;
+    /*全幅表示*/
+    transform: translateY(-100%);
+    /*ナビを上に隠す*/
+    transition: all 0.6s;
+    /*アニメーションの時間を指定*/
+}
+
+nav.NavMenu ul {
+    background: rgba(2, 2, 8, 0.5);
+    /*背景をグレーにする*/
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+}
+
+nav.NavMenu ul li {
+    font-size: 1.1em;
+    list-style-type: none;
+    padding: 0;
+    width: 100%;
+}
+
+nav.NavMenu ul li:last-child {
+    padding-bottom: 0;
+    border-bottom: none;
+    /*最後のメニュー項目のみ下線を消す*/
+}
+
+nav.NavMenu ul li a {
+    display: block;
+    /*クリックできる領域を広げる*/
+    color: #fff;
+    font-size: 16rem;
+    padding: 1em 0;
+    text-decoration: none;
+}
+
+/*トグルボタンが押されたときに付与するクラス*/
+nav.NavMenu.active {
+    transform: translateY(0%);
+}
+
+/*トグルボタンのスタイルを指定*/
+.Toggle {
+    display: block;
+    position: fixed;
+    /* bodyに対しての絶対位置指定 */
+    right: 13px;
+    top: 12px;
+    width: 42px;
+    height: 42px;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.Toggle span {
+    display: block;
+    position: absolute;
+    width: 30px;
+    border-bottom: solid 3px #fff;
+    -webkit-transition: .35s ease-in-out;
+    /*変化の速度を指定*/
+    -moz-transition: .35s ease-in-out;
+    /*変化の速度を指定*/
+    transition: .35s ease-in-out;
+    /*変化の速度を指定*/
+    left: 6px;
+}
+
+.Toggle span:nth-child(1) {
+    top: 9px;
+}
+
+.Toggle span:nth-child(2) {
+    top: 18px;
+}
+
+.Toggle span:nth-child(3) {
+    top: 27px;
+}
+
+/* 最初のspanをマイナス45度に */
+.Toggle.active span:nth-child(1) {
+    top: 18px;
+    left: 6px;
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+
+/* 2番目と3番目のspanを45度に */
+.Toggle.active span:nth-child(2),
+.Toggle.active span:nth-child(3) {
+    top: 18px;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
 /*弦音巴とは？作成*/
@@ -368,7 +485,7 @@ nav {
     margin: 16px auto 0;
 }
 
-#slideForMobile img{
+#slideForMobile img {
     width: 100%;
 }
 
@@ -405,7 +522,7 @@ nav {
     padding-top: 5%;
 }
 
-.welcomePartyPlaceBoxForMobile p{
+.welcomePartyPlaceBoxForMobile p {
     font-size: 10rem;
     font-weight: 400;
 }
@@ -491,39 +608,39 @@ nav {
 }
 
 /*活動風景作成*/
-#gallery p{
+#gallery p {
     font-size: 24rem;
     font-weight: 500;
     text-align: center;
 }
 
-.slider-for{
+.slider-for {
     width: 76%;
     margin: 30px auto;
 }
 
-.slider-for img{
+.slider-for img {
     width: 100%;
 }
 
-.slider-nav{
+.slider-nav {
     width: 72%;
     margin: 30px auto;
 }
 
-.slider-nav img{
+.slider-nav img {
     width: 100%;
 }
 
 /*コンタクト作成*/
-#contact p{
+#contact p {
     font-size: 24rem;
     font-weight: 500;
     text-align: center;
     margin-bottom: 64px;
 }
 
-#contact .forMobile{
+#contact .forMobile {
     font-size: 12rem;
     font-weight: 400;
     text-align: center;
@@ -547,7 +664,7 @@ nav {
     border-right: 1px solid #fff;
 }
 
-#contact li:last-child{
+#contact li:last-child {
     border: none;
 }
 
@@ -558,7 +675,7 @@ nav {
 }
 
 /*フッター作成*/
-footer{
+footer {
     color: #fff;
     font-size: 8rem;
     line-height: 4.2;
